--- a/W9D3/css-friends-03/skeleton/03-layout.html
+++ b/W9D3/css-friends-03/skeleton/03-layout.html
@@ -12,6 +12,7 @@
     <link rel="stylesheet" href="css/01-header.css" type="text/css" />
     <link rel="stylesheet" href="css/02-notifications.css" type="text/css" />
     <link rel="stylesheet" href="css/03-layout.css" type="text/css" />
+    <link rel="stylesheet" href="css/04-footer.css" type="text/css" />
   </head>
   <body>
     <header class="header">
@@ -39,4 +40,17 @@
       <section class="content-main"></section>
     </div>
   </body>
+  <footer>
+    <div class="footer">
+      <p class="footer-content">© 2014 App Academy. All rights reserved.</p>
+      <nav>
+        <ul class="footer-links">
+          <li>Home</li>
+          <li>About</li>
+          <li>Terms</li>
+          <li>Privacy</li>
+        </ul>
+      </nav>
+    </div>
+  </footer>
 </html>
