--- a/W9D4/css friends-06/06-sidebar.html
+++ b/W9D4/css friends-06/06-sidebar.html
@@ -57,10 +57,10 @@
         </div>
         <div class="profile-nav">
           <ul>
-            <li>Wall</li>
-            <li>About</li>
-            <li>Friends</li>
-            <li>Photos</li>
+            <li><a href="#"></a>Wall</li>
+            <li><a href="#"></a>About</li>
+            <li><a href="#"></a>Friends</li>
+            <li><a href="#"></a>Photos</li>
           </ul>
         </div>
       </section>
