--- a/W10D5/Vanilla DOM Manipulation/index.html
+++ b/W10D5/Vanilla DOM Manipulation/index.html
@@ -44,7 +44,7 @@
 
     <button type="button" class="photo-show-button">Toggle new photo form</button>
 
-    <div class="photo-form-container ">
+    <div class="photo-form-container hidden">
       <form>
         <input type="text" class="photo-url-input" placeholder="image URL"/>
         <input type="submit" class="photo-url-submit" value="Add photo"/>
