--- a/W11D1/css-friends-12/skeleton/12-modal.html
+++ b/W11D1/css-friends-12/skeleton/12-modal.html
@@ -231,6 +231,43 @@
     </ul>
 
   </footer>
+<div class="modal is-open">
+  <form class="modal-form ">
+    <span class="modal-close js-modal-close">&times;</span>
+    <h1>Welcome</h1>
+    <p>Please sign in to continue</p>
+    <div class="input">
+        <label for="form-email">Email</label>
+        <input type="text" id="form-email" value="sennacy@appacademy.io">
+    </div>
+    <div class="input">
+      <label for="form-password">Password</label>
+      <input type="password" id="form-password" value="password" >
+    </div>
+    <div class="submit">
+      <button>Sign In</button>
+      <span class="button-alternative">or <strong class="js-modal-close">Cancel</strong></span>
+    </div>
+  </form>
+    <div class="modal-screen js-modal-close"></div>
+</div>
+<script src="https://code.jquery.com/jquery-3.5.1.min.js"
+  integrity="sha256-9/aliU8dGd2tb6OSsuzixeV4y/faTqgFtohetphbbj0=" crossorigin="anonymous"></script>
+<script>
+  $(function () {
+    $("body").on("click", ".js-modal-open", function (event) {
+      event.preventDefault();
+      $(".modal").addClass("is-open");
+    });
+
+    $("body").on("click", ".js-modal-close", function (event) {
+      event.preventDefault();
+      $(".modal").removeClass("is-open");
+    });
+
+  });
+</script>
 
 </body>
 </html>
+
