add signin modal

--- a/W11D1/css-friends-12/skeleton/12-modal.html
+++ b/W11D1/css-friends-12/skeleton/12-modal.html
@@ -34,10 +34,13 @@
             <li><a href="#">Constance likes your photo.</a></li>
             <li><a href="#">Tommy left you a comment.</a></li>
             <li><a href="#">Jonathan is now following you.</a></li>
+            
           </ul>
         </li>
         <li><a href="#">Profile</a></li>
         <li><a href="#">Settings</a></li>
+        <li><a href="#" class="js-modal-open">Sign in</a></li>
+
       </ul>
 
     </nav>
@@ -153,6 +156,7 @@
                 <li><a href="#" class="icon-comment">Comment</a></li>
                 <li><a href="#" class="icon-reblog">Reblog</a></li>
                 <li><a href="#" class="icon-favorite">Favorite</a></li>
+                
               </ul>
             </footer>
           </div>
@@ -180,6 +184,7 @@
                 <li><a href="#" class="icon-comment">Comment</a></li>
                 <li><a href="#" class="icon-reblog">Reblog</a></li>
                 <li><a href="#" class="icon-favorite">Favorite</a></li>
+
               </ul>
             </footer>
           </div>
